# Chessboard-Importer

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  example.env  traefik.dev.toml
app/: Dockerfile  pyproject.toml
app/code/: authorization.py  fen_improved.py  image_converter.py  image_corners.py  image_crop.py  image_final_crop.py  image_intersections.py  image_lines.py  main.py  prediction.py  read_chessboard.py  train_model.py  users.py
app/code/data/models/: laps.model.json
